Completed Base Search Common For Restful