@@ -5,8 +5,7 @@ import lombok.Getter;
 import vn.com.demo.commonsearch.anno.IncludeSearchKey;
 
 import java.lang.reflect.Field;
-import java.util.Collections;
-import java.util.List;
+import java.util.*;
 
 
 @Getter
@@ -14,24 +13,26 @@ public class EntityField {
 
     public EntityField(Field field) {
         field.setAccessible(true);
-        this.field = field;
         fieldType = field.getType();
         fieldName = field.getName();
         if (field.isAnnotationPresent(IncludeSearchKey.class)) {
             IncludeSearchKey includeSearchKey = field.getAnnotation(IncludeSearchKey.class);
-            this.searchList = List.of(includeSearchKey.value());
-            this.searchable = !searchList.isEmpty();
+            List<String> searchKeys = Arrays.asList(includeSearchKey.value());
+
+            this.searchKeys = searchKeys.isEmpty()
+                    ? List.of(fieldName)
+                    : searchKeys.stream()
+                    .map(s -> fieldName + "." + s)
+                    .toList();
+            this.searchable = true;
         } else {
             this.searchable = false;
-            this.searchList = Collections.emptyList();
+            this.searchKeys = List.of(fieldName);
         }
     }
-
-    private final Field field;
-
     private final boolean searchable;
 
-    private final List<String> searchList;
+    private final List<String> searchKeys;
 
     private final Class<?> fieldType;
 
